--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="topnav">
     <a class="active" href="#home">Home</a>
     <a href="#explore">Explore</a>
+    <a href="#videos">Videos</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
     <input type="text"class="searchbar" placeholder="Search..">
@@ -45,7 +46,8 @@
       <li><a href="https://www.linkedin.com/in/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
       <li><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
       <li><a href="https://www.youtube.com/channel/UCrXUy5nkr0PJxaiC62N35Yg" target="_blank"><i class="fa fa-youtube fa-2x"></i></a></li>
-  </ul>
+      <li><a href="https://www.facebook.com/profile.php?id=61560450043804" target="_blank"><i class="fa fa-facebook fa-2x"></i></a></li>
+    </ul>
   
 
 
