--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
-    <a href="#explore">Explore</a>
-    <a href="#videos">Videos</a>
+    <a href="explore.html">Explore</a>
+    <a href="videos.html">Videos</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
     <input type="text"class="searchbar" placeholder="Search..">
@@ -28,14 +28,14 @@
             <li><strong>Educational Focus:</strong> Our curated collection is designed to support learners of all ages, from students and educators to lifelong learners.</li>
             <li><strong>Free and Accessible:</strong> We believe that knowledge should be free. Access our entire library without any cost, and learn at your own pace.</li>
         </ul>
-        <p>Start your learning adventure today with AudioLearn, where knowledge speaks your language!</p>
+        <p>Start your learning adventure today with fReEAD, where knowledge speaks your language!</p>
         <iframe width="420" height="345" src="https://www.youtube.com/embed/9iyw5HxWfKA">
         </iframe>
         <br>
         <br>
       </section>
 
-  </body>
+  </body>a
 <hr>
 
 <div class="footer"></div>
