--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="explore.html">Explore</a>
     <a href="videos.html">Videos</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="about.html">About</a>
     <input type="text"class="searchbar" placeholder="Search..">
   </div>
-  <img src="images/Logo_blue.png" alt="Christopher Profile Picture"></td>
+  <img src="images/Logo_blue.png" alt="Logo"></td>
       
         <h1>Welcome to the fReEAD Project!</h1>
     <section>
@@ -35,7 +35,7 @@
         <br>
       </section>
 
-  </body>a
+  </body>
 <hr>
 
 <div class="footer"></div>
