--- a/contact-us.html
+++ b/contact-us.html
@@ -20,40 +20,21 @@
  
   <img class="logo"; src="images/Logo_blue.png" alt="Logo"></td>
  
-
-  <h1>Latest Audio Books!</h1>
-   
-  <h2>Edgar Allen Poe - English </h2>
-  <iframe width="420" height="345" src="https://www.youtube.com/embed/9iyw5HxWfKA">
-  </iframe>
-  <iframe width="420" height="345" src="https://www.youtube.com/embed/iP6eNz2ulL4">
-  </iframe>
-  <iframe width="420" height="345" src="https://www.youtube.com/embed/EFpfjrbwheM">
-  </iframe>
-  <iframe width="420" height="345" src="https://www.youtube.com/embed/MdmvmJ8MGCI">
-  </iframe>
-  
-  
-    <h2>Edgar Allen Poe - Francais </h2>
-    <iframe width="420" height="345" src="https://www.youtube.com/embed/SvQ1GLRkUIY">
-    </iframe>
-    <iframe width="420" height="345" src="https://www.youtube.com/embed/JFRvcofmIlk">
-    </iframe>
-    <iframe width="420" height="345" src="https://www.youtube.com/embed/bAmi27cX-8A">
-    </iframe>
-    <iframe width="420" height="345" src="https://www.youtube.com/embed/kNIkDpdJJ1o">
-  </iframe>
-  
-  
-      <h2>Jules Verne - A Jouney to the center of the earth - English </h2>
-      <iframe width="420" height="345" src="https://www.youtube.com/embed/bfp9Kvj6ktc">
-      </iframe>
-      <iframe width="420" height="345" src="https://www.youtube.com/embed/3cw8CckHZ1c">
-      </iframe>
-      <iframe width="420" height="345" src="https://www.youtube.com/embed/_nhBqbyy4uU">
-      </iframe>
-      <iframe width="420" height="345" src="https://www.youtube.com/embed/TaHprsL0Fcc">
-    </iframe>
+  <h1> Contact Us!</h1>
+<h4>If you have any feedback, questions or recommendations for new content please feel free to contact us at any time!</h4>
+  <p></p>
+  <p><a href= "mailto: freead.project@gmail.com"> freead.project@gmail.com </a></p>
+<hr>
+  <form action="mailto:freead.project@gmail.com@hotmail.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label>Your Emal:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <label>Your Message:</label><br>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+    <input type="submit" name="">
+  </form>
+     
 
   </body>
 <hr>
