--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a class="active" href="index.html">Home</a>
     <a href="explore.html">Explore</a>
     <a href="videos.html">Videos</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact-us.html">Contact</a>
     <a href="about.html">About</a>
       
     <input type="text"class="searchbar" placeholder="Search..">
