--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
   <div class="topnav">
     <a class="active" href="index.html">Home</a>
-    <a href="explore.html">Explore</a>
     <a href="videos.html">Videos</a>
     <a href="contact-us.html">Contact</a>
     <a href="about.html">About</a>
@@ -19,7 +18,7 @@
   </div>
  
   <img class="logo"; src="images/Logo_blue.png" alt="Logo"></td>
- 
+  <marquee font style="bold" scrolldelay="100"><font size="5" face="Verdana"><font color="red">***Under Construction*** The Freead Project is currently updating our Website. Please bare with us as our website will be updated shortly with hundreds of brand new videos and a new UI!</marquee>
      
       
         <h1>Welcome to the fReEAD Project!</h1>
